add some self-signed keys and update for cluster run

--- a/docker-drupal-6/app.conf
+++ b/docker-drupal-6/app.conf
@@ -1,12 +1,15 @@
 server {
   listen 80;
-  server_name willhallonline.co.uk www.willhallonline.co.uk;
-  return 301 https://www.willhallonline.co.uk$request_uri;
+  return 301 https://$server_name$request_uri?;
 }
 
 server {
   listen 443 ssl http2;
-  root /app;
+
+  ssl_certificate      /etc/letsencrypt/live/willhallonline.co.uk/fullchain.pem;
+  ssl_certificate_key  /etc/letsencrypt/live/willhallonline.co.uk/privkey.pem;
+
+  root /app/willhallonline;
   index index.php;
   gzip_static on;
   gzip_http_version 1.0;
