Updates on demo's of stuff I have missed

--- a/docker-drupal-2/docker-compose.yml
+++ b/docker-drupal-2/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       DRUPAL_DBURL: mysql://drupal:drupal@database:3306/drupal
     ports:
       - "8001:80"
-    link:
+    links:
       - database
     restart: always
 
