--- a/docker-drupal-6/docker-compose.yml
+++ b/docker-drupal-6/docker-compose.yml
@@ -1,9 +1,5 @@
 version: '3'
 
-networks:
-  code-network:
-    driver: bridge
-
 services:
   mariadb:
     container_name: mysql
@@ -22,4 +18,6 @@ services:
     build: .
     ports:
       - "8001:80"
+    links:
+      - mariadb
 
