name default.settings.php correctly

--- a/docker-drupal-6/Dockerfile
+++ b/docker-drupal-6/Dockerfile
@@ -10,6 +10,6 @@ COPY --from=willhallonline/drupal-drush-multi:latest /usr/lib/drush8 /usr/lib/
 RUN  ln -s /usr/lib/drush/vendor/bin/drush /usr/local/bin/drush && ln -s /usr/lib/drush8/vendor/bin/drush /usr/local/bin/drush8
 
 COPY ./app /app
-RUN cp /app/sites/default/settings.php /app/sites/default/settings.php && chmod 777 /app/sites/default/settings.php \
+RUN cp /app/sites/default/default.settings.php /app/sites/default/settings.php && chmod 777 /app/sites/default/settings.php \
     && mkdir /app/sites/default/files && chmod 777 /app/sites/default/files
 COPY ./app.conf /etc/nginx/conf.d/default.conf
