Update name of solr core

--- a/docker-drupal-4/docker-compose.yml
+++ b/docker-drupal-4/docker-compose.yml
@@ -54,6 +54,6 @@ services:
     networks:
       - code-network
     environment:
-      - core_create -c motnearme -d drupal
+      - core_create -c example -d drupal
 
 
